--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@popperjs/core": "^2.10.1",
     "bootstrap": "^5.1.3",
+    "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0"
   },
   "devDependencies": {
