--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,5 +3,7 @@ languageCode: 'fr-FR'
 theme: "osuny-school"
 
 paginate: 12
+
 permalinks:
   posts: /actualites/:year/:month/:day/:slug/
+  persons: /equipe/:slug/
