--- a/data/menus/primary.yml
+++ b/data/menus/primary.yml
@@ -8,27 +8,27 @@
   kind: page
   children:
   - title: Présentation de l'IUT
-    target: "/notre-institut/presentation-de-liut"
+    target: "/notre-institut/presentation-de-liut/"
     kind: page
     children: []
   - title: Les atouts des IUT
-    target: "/notre-institut/les-atouts-des-iut"
+    target: "/notre-institut/les-atouts-des-iut/"
     kind: page
     children: []
   - title: Équipe pédagogique (-)
-    target: "/notre-institut/equipe-pedagogique"
+    target: "/notre-institut/equipe-pedagogique/"
     kind: page
     children: []
   - title: Équipe pédagogique
-    target: "/equipe"
+    target: "/equipe/"
     kind: staff
     children: []
   - title: Ressources
-    target: "/notre-institut/ressources-techniques"
+    target: "/notre-institut/ressources-techniques/"
     kind: page
     children: []
   - title: Plan d’accès et contact
-    target: "/notre-institut/plan-dacces-et-contact"
+    target: "/notre-institut/plan-dacces-et-contact/"
     kind: page
     children: []
   - title: Consignes de sécurité
@@ -36,7 +36,7 @@
     kind: url
     children: []
   - title: Relations avec les entreprises
-    target: "/notre-institut/relations-avec-les-entreprises"
+    target: "/notre-institut/relations-avec-les-entreprises/"
     kind: page
     children: []
 - title: Offre de formation
@@ -184,11 +184,11 @@
   kind: programs
   children:
   - title: Bachelor Universitaire de Technologie (B.U.T.)
-    target: "/programmes/bachelor-universitaire-de-technologie"
+    target: "/programmes/bachelor-universitaire-de-technologie/"
     kind: program
     children:
     - title: Animation sociale et socioculturelle
-      target: "/programmes/bachelor-universitaire-de-technologie/carrieres-sociales/parcours-animation-sociale-et-socioculturelle"
+      target: "/programmes/bachelor-universitaire-de-technologie/carrieres-sociales/parcours-animation-sociale-et-socioculturelle/"
       kind: program
       children: []
   - title: Diplômes Universitaires (DU)
