better access to terms

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -7,4 +7,5 @@ permalinks:
   authors: /auteurs/:slug/
   categories: /actualites/categories/:slug/
 taxonomies:
-  author: "authors"
+  category: categories
+  author: authors
