--- a/themes/osuny-school/theme.toml
+++ b/themes/osuny-school/theme.toml
@@ -1,15 +1,12 @@
-# theme.toml template for a Hugo theme
-# See https://github.com/gohugoio/hugoThemes#themetoml for an example
-
-name = "OsunyWww"
+name = "Osuny School"
 license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
+licenselink = "https://github.com/noesya/osuny-hugo-school/blob/master/LICENSE"
 description = ""
-homepage = "http://example.com/"
+homepage = "https://www.osuny.org/"
 tags = []
 features = []
 min_version = "0.41.0"
 
 [author]
-  name = ""
-  homepage = ""
+  name = "noesya"
+  homepage = "https://www.noesya.coop"
