--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ theme: osuny-school
 paginate: 18
 permalinks:
   authors: /auteurs/:slug/
-  categories: /actualites/categories/:slug/
+  categories: /actualites/:sections/:slug/
   posts: /actualites/:year/:month/:day/:slug/
 taxonomies:
   category: categories
