--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 title: IUT Bordeaux Montaigne
 languageCode: fr-FR
-theme: osuny-school
+theme: hugo-osuny
 paginate: 18
 permalinks:
   posts:          /actualites/:year/:month/:day/:slug/
