--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "noesya",
   "license": "MIT",
   "dependencies": {
+    "@popperjs/core": "^2.10.1",
+    "bootstrap": "^5.1.3"
   },
   "devDependencies": {
   }
