--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "dependencies": {
     "@popperjs/core": "^2.10.1",
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "postcss-cli": "^9.1.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
