--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "scripts": {
+    "build": "hugo --minify"
+  }
 }
