--- a/themes/hugo-osuny/theme.toml
+++ b/themes/hugo-osuny/theme.toml
@@ -1,11 +1,11 @@
 name = "Osuny School"
 license = "MIT"
-licenselink = "https://github.com/noesya/osuny-hugo-school/blob/master/LICENSE"
-description = ""
-homepage = "https://www.osuny.org/"
+licenselink = "https://github.com/noesya/hugo-osuny/blob/master/LICENSE"
+description = "Hugo theme for Osuny websites"
+homepage = "https://www.osuny.org"
 tags = []
 features = []
-min_version = "0.41.0"
+min_version = "0.91.0"
 
 [author]
   name = "noesya"
