--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hugo-osuny"]
 	path = themes/hugo-osuny
-	url = https://github.com/noesya/hugo-osuny
+	url = ssh://git@github.com:noesya/hugo-osuny
