--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hugo-osuny"]
 	path = themes/hugo-osuny
-	url = ssh://git@github.com:noesya/hugo-osuny.git
+	url = git@github.com:noesya/hugo-osuny.git
