--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/hugo-osuny"]
-	path = themes/hugo-osuny
-	url = git@github.com:noesya/hugo-osuny.git
+[submodule "themes/osuny-hugo-theme"]
+	path = themes/osuny-hugo-theme
+	url = git@github.com:noesya/osuny-hugo-theme.git
