--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 params:
   cookie_page: https://gdpr.eu/cookies/
-  cdnURL: https://bdxmontaigneosuny-1b4da.kxcdn.com/
+  cdnkey: https://osuny-1b4da.kxcdn.com
 baseURL: https://bordeauxmontaigne-iut.netlify.app/
 defaultContentLanguage: fr
 languageCode: fr
