--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,7 @@
 params:
-  cookie_page: https://gdpr.eu/cookies/
   cdnkey: https://osuny-1b4da.kxcdn.com
+  cookie_banner:
+    enable: false
 baseURL: https://bordeauxmontaigne-iut.netlify.app/
 defaultContentLanguage: fr
 languageCode: fr
