--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,7 @@ theme: osuny-hugo-theme
 paginate: 18
 permalinks:
   posts:          /actualites/:year/:month/:day/:slug/
-  categories:     /actualites/:sections/:slug/
+  categories:     /actualites/:slug/
   persons:        /equipe/:slug/
   authors:        /equipe/:slug/actualites/
   administrators: /equipe/:slug/administration/
