--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 params:
-  cdnkey: https://osuny-1b4da.kxcdn.com
+  keycdn: https://osuny-1b4da.kxcdn.com
   cookie_banner:
     enable: false
 baseURL: https://bordeauxmontaigne-iut.netlify.app/
