--- a/config/_default/permalinks.yaml
+++ b/config/_default/permalinks.yaml
@@ -1,5 +1,6 @@
 posts:          /actualites/:year/:month/:day/:slug/
 categories:     /actualites/:slug/
+diplomas:       /diplomes/:slug/
 persons:        /notre-institut/equipe/:slug/
 authors:        /notre-institut/equipe/:slug/actualites/
 administrators: /notre-institut/equipe/:slug/roles/
