--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bordeauxmontaigne-iut",
-  "version": "1.0.0",
-  "repository": "https://github.com/noesya/bordeauxmontaigne-iut",
+  "name": "osuny-hugo-template",
+  "version": "1.0.1",
+  "repository": "https://github.com/noesya/osuny-hugo-template",
   "author": "noesya",
   "license": "MIT",
   "dependencies": {
@@ -11,8 +11,13 @@
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "autoprefixer": "^10.4.2",
     "cssnano": "^5.0.15",
-    "postcss": "^8.4.5",
-    "postcss-cli": "^9.1.0"
+    "postcss": "^8.4.14",
+    "postcss-cli": "^9.1.0",
+    "postcss-sass": "^0.5.0",
+    "stylelint": "^14.9.1",
+    "stylelint-a11y": "^1.2.3",
+    "stylelint-config-standard": "^26.0.0",
+    "stylelint-scss": "^4.2.0"
   },
   "scripts": {
     "watch": "hugo server",
@@ -21,6 +26,7 @@
     "update": "git pull --recurse-submodules --depth 1 && git submodule update --remote",
     "setup-example": "git submodule add https://github.com/noesya/osuny-example",
     "server-example": "hugo server --config 'osuny-example/config/example/config.yaml'",
-    "example": "yarn setup-example > /dev/null || yarn update && yarn server-example"
+    "example": "yarn setup-example > /dev/null || yarn update && yarn server-example",
+    "update-theme": "cd themes/osuny-hugo-theme && git checkout main && git pull && cd ../.. && git commit -am 'theme'"
   }
 }
