--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "osuny-hugo-template",
+  "name": "bordeauxmontaigne-iut",
   "version": "1.0.1",
-  "repository": "https://github.com/noesya/osuny-hugo-template",
+  "repository": "https://github.com/noesya/bordeauxmontaigne-iut",
   "author": "noesya",
   "license": "MIT",
   "dependencies": {
