--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -4,39 +4,13 @@ name: Percy.io Visual Diff
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: 
+      - main
+      - v2
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [16.x]
-
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: recursive  # Fetch Hugo themes (true OR recursive)
-        fetch-depth: 0 
-    # install hugo
-    - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v2
-      with:
-        hugo-version: '0.93.1'
-        extended: true
-    # build the site
-    - name: Build
-      run: npm install && hugo --minify -e development
-    # run percy test
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm install -g @percy/cli
-    - run: percy snapshot ./public
-      env:
-        PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+      - uses: actions/checkout@v3
+      - name: Percy Test
+        run: npx @percy/cli snapshot public/ 
