--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v3
       - name: Percy Test
         run: npx @percy/cli snapshot public/ 
