--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -14,5 +14,24 @@ jobs:
         with:
           submodules: true
           fetch-depth: 1
+
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: ${{ secrets.HUGO_VERSION }}
+          extended: true
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+          cache: 'yarn'
+
+      - name: Install JS dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Build
+        run: hugo -e ${{ secrets.HUGO_ENV }} --minify
+
       - name: Percy Test
         run: npx @percy/cli snapshot public/ 
