--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -2,8 +2,9 @@ name: Percy
 
 on:
   pull_request:
+    types: [opened, reopened, review_requested, edited]
     branches:
-      - v2
+      - theme-aaa
 
 jobs:
   build:
