--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -29,10 +29,8 @@ jobs:
       - name: Install JS dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Start Hugo server
-        run: hugo server -e ${{ secrets.HUGO_ENV }} --minify
-
       - name: Percy Test
         run: npx @percy/cli snapshot snapshots.yml
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+        with: hugo server -e ${{ secrets.HUGO_ENV }} --minify
