--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -30,7 +30,7 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Percy Test
-        uses: BerniWittmann/background-server-action@latest
+        uses: BerniWittmann/background-server-action@1.0.4
         with: 
           command: npx @percy/cli snapshot snapshots.yml
           start: hugo server -e ${{ secrets.HUGO_ENV }} --minify
