--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -34,3 +34,5 @@ jobs:
 
       - name: Percy Test
         run: npx @percy/cli snapshot snapshots.yml
+        env:
+          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
