setup new theme

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "noesya",
   "license": "MIT",
   "dependencies": {
-    "osuny-hugo-theme": "./themes/osuny-hugo-theme"
+    "osuny-hugo-theme": "./themes/osuny-hugo-theme-aaa"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.1.3",
@@ -27,6 +27,6 @@
     "setup-example": "git submodule add https://github.com/noesya/osuny-example",
     "server-example": "hugo server --config 'osuny-example/config/example/config.yaml'",
     "example": "yarn setup-example > /dev/null || yarn update && yarn server-example",
-    "update-theme": "cd themes/osuny-hugo-theme && git checkout main && git pull && cd ../.. && git commit -am 'theme'"
+    "update-theme": "cd themes/osuny-hugo-theme-aaa && git checkout main && git pull && cd ../.. && git commit -am 'theme'"
   }
 }
