--- a/package.json
+++ b/package.json
@@ -8,16 +8,11 @@
     "osuny-hugo-theme": "./themes/osuny-hugo-theme-aaa"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^4.1.3",
     "autoprefixer": "^10.4.2",
     "cssnano": "^5.0.15",
     "postcss": "^8.4.14",
     "postcss-cli": "^9.1.0",
-    "postcss-sass": "^0.5.0",
-    "stylelint": "^14.9.1",
-    "stylelint-a11y": "^1.2.3",
-    "stylelint-config-standard": "^26.0.0",
-    "stylelint-scss": "^4.2.0"
+    "postcss-sass": "^0.5.0"
   },
   "scripts": {
     "watch": "hugo server",
