--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,10 @@
+[build]
+  publish = "public"
+  command = "hugo"
+
+[build.environment]
+  HUGO_VERSION = "0.108.0"
+
 [[headers]]
   for = "/*"
   [headers.values]
